--- a/TA2/my-app/package.json
+++ b/TA2/my-app/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-spinners": "^0.9.0",
     "react-transition-group": "^4.4.1"
   },
   "scripts": {
