--- a/technical-assignments/w3-w4/Assignment-DatHuis/package.json
+++ b/technical-assignments/w3-w4/Assignment-DatHuis/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/robvk/dh-frontend-assignment#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "axios": "^0.21.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "styled-components": "^4.4.1"
